<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_03">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp" >
        <Button 
            android:id="@+id/mainDiaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_diary"
            android:textColor="@color/Pink"
            android:background="@drawable/button_01"
            android:layout_gravity="start"/>
        <TextView
            android:id="@+id/mainTitleAndDateTextView"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            style="@style/MainTitleAndDate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/main_title_and_date"
        	android:layout_centerHorizontal="true"
        	android:gravity="center" />
        <Button 
            android:id="@+id/mainAddButton"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Pink"
            android:background="@drawable/button_01"
            android:text="@string/main_add"/>
    </RelativeLayout>
   
    <TextView
        android:id="@+id/mainCaloriesTextView"
        style="@style/MainCalories"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/main_calories" />
    <Button 
        android:id="@+id/mainSettingButton"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Pink"
        android:background="@drawable/button_01"
        android:text="@string/main_setting" />

</RelativeLayout>